Closed Bug 497867 Opened 16 years ago Closed 16 years ago

nsDocAccessible::TakeFocus() should return a value

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: regression)

Attachments

(1 file)

Attached patch fixSplinter Review
gcc on Linux complains: nsDocAccessible.cpp: In member function 'virtual nsresult nsDocAccessible::TakeFocus()': nsDocAccessible.cpp:387: warning: control reaches end of non-void function Looks like a regression from bug 178324.
Attachment #382952 - Flags: review?(marco.zehe)
Comment on attachment 382952 [details] [diff] [review] fix Thanks Mats!
Attachment #382952 - Flags: review?(marco.zehe) → review+
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: