Add missing 'return' in nsDocAccessible::TakeFocus(). b=497867 r=marco.zehe