accessible/src/base/nsDocAccessible.cpp
@@ -380,10 +380,12 @@ NS_IMETHODIMP nsDocAccessible::TakeFocus()
     if (document) {
       // focus the document
       nsCOMPtr<nsIDOMElement> newFocus;
-      fm->MoveFocus(document->GetWindow(), nsnull, nsIFocusManager::MOVEFOCUS_ROOT, 0,
-                    getter_AddRefs(newFocus));
+      return fm->MoveFocus(document->GetWindow(), nsnull,
+                           nsIFocusManager::MOVEFOCUS_ROOT, 0,
+                           getter_AddRefs(newFocus));
     }
   }
+  return NS_ERROR_FAILURE;
 }
 
 // ------- nsIAccessibleDocument Methods (5) ---------------
